added link for Elektro Ehreiser

--- a/sponsoren.html
+++ b/sponsoren.html
@@ -80,7 +80,7 @@
               </a>
             </li>
             <li>
-              <a href="#" target="_blank" style="border-radius: 0px;">
+              <a href="https://www.gelbeseiten.de/Suche/Elektro/B%C3%BChl%20Baden%20Stadtteil%20Eisental" target="_blank" style="border-radius: 0px;">
                 <img src="images/sponsoren/10ehreiser.jpg" alt="Banner Ehreiser" />
               </a>
             </li>
