--- a/mannschaften.html
+++ b/mannschaften.html
@@ -139,7 +139,7 @@
             
             <h4 id="schueler1">Schüler 1</h4>
             <img
-              src="images/mannschaftsbilder/Schüler1.jpg"
+              src="images/mannschaftsbilder/Schueler1.jpg"
               alt="Gruppenfoto Schüler 1"
               style="max-width: 80%;"
             />
@@ -151,7 +151,7 @@
             <hr />
             <h4 id="schueler2">Schüler 2</h4>
             <img
-              src="images/mannschaftsbilder/Schüler2.jpg"
+              src="images/mannschaftsbilder/Schueler2.jpg"
               alt="Gruppenfoto Schüler 2"
               style="max-width: 80%;"
             />
@@ -163,7 +163,7 @@
             <hr />
             <h4 id="schueler3">Schüler 3</h4>
             <img
-              src="images/mannschaftsbilder/Schüler3.jpg"
+              src="images/mannschaftsbilder/Schueler3.jpg"
               alt="Gruppenfoto Schüler 3"
               style="max-width: 80%;"
             />
