--- a/sponsoren.html
+++ b/sponsoren.html
@@ -76,7 +76,7 @@
             </li>
             <li>
               <a href="https://www.fliesenleger.net/buehlertal/e-baeuerle-gmbh-fliesen-platten-mosaik-natursteinarbeiten-aULiLZ" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/09bäuerle.jpg" alt="Banner Bäuerle" />
+                <img src="images/sponsoren/09baeuerle.jpg" alt="Banner Bäuerle" />
               </a>
             </li>
             <li>
@@ -92,7 +92,7 @@
             </li>
             <li>
               <a href="https://www.immobilien-mittelbaden.de/" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/12wüstenrot.jpg"
+                <img src="images/sponsoren/12wuestenrot.jpg"
                   alt="Banner Wüstenrot" />
               </a>
             </li>
@@ -113,7 +113,7 @@
             </li>
             <li>
               <a href="https://www.google.com/maps/place/B%C3%BChlert%C3%A4ler+Grill+-+D%C3%B6ner+%26+Pizza/@48.6942352,8.1754421,17z/data=!3m1!4b1!4m5!3m4!1s0x479720e89c0a5af7:0x3d93777ee1e0947e!8m2!3d48.6942352!4d8.1776308" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/18bühlertaler-grill.jpg"
+                <img src="images/sponsoren/18buehlertaler-grill.jpg"
                   alt="Banner Bühlertäler Grill" />
               </a>
             </li>
@@ -135,12 +135,12 @@
             </li>
             <li>
               <a href="http://www.gartengestaltung-baeuerle.de/" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/22bäuerle.jpg" alt="Banner Bäuerle" />
+                <img src="images/sponsoren/22baeuerle.jpg" alt="Banner Bäuerle" />
               </a>
             </li>
             <li>
               <a href="https://www.tripadvisor.de/Restaurant_Review-g1063576-d14363114-Reviews-Restaurant_SchwarzwaldMadel-Buehlertal_Baden_Wurttemberg.html" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/23mädel.jpg" alt="Banner Schwarzwaldmädel" />
+                <img src="images/sponsoren/23maedel.jpg" alt="Banner Schwarzwaldmädel" />
               </a>
             </li>
             <li>
@@ -187,7 +187,7 @@
             </li>
 	    <li>
               <a href="https://www.karl-link.de/" target="_blank" style="border-radius: 0px;">
-                <img src="images/sponsoren/31link.PNG"
+                <img src="images/sponsoren/31link.png"
                   alt="Banner Link" />
               </a>
             </li>
