--- a/termine.html
+++ b/termine.html
@@ -46,12 +46,12 @@
             <h2>Termine und Fahrerliste</h2>
             <img
               style="display: unset;"
-              src="images/jugendfahrplanvorschau.PNG"
+              src="images/jugendfahrplanvorschau2020.PNG"
               alt="Vorschaubild Jugendfahrplan"
             />
             <form
               method="get"
-              action="other/Jugendplan_VR2019.pdf"
+              action="other/Jugendplan_RR_2019_20.pdf"
               style="margin-bottom: 5px;"
             >
               <button type="submit">Download</button>
