added sponsor welle bgv

--- a/sponsoren.html
+++ b/sponsoren.html
@@ -185,10 +185,17 @@
                   alt="Banner SV Achim Greis" />
               </a>
             </li>
-	    <li>
+	          <li>
               <a href="https://www.karl-link.de/" target="_blank" style="border-radius: 0px;">
                 <img src="images/sponsoren/31link.png"
                   alt="Banner Link" />
+              </a>
+            </li>
+            </li>
+	          <li>
+              <a href="https://www.11880.com/branchenbuch/buehlertal/081856046B28991376/clemens-welle-versicherungsagentur.html" target="_blank" style="border-radius: 0px;">
+                <img src="images/sponsoren/32welle.jpg"
+                  alt="Banner BGV Welle" />
               </a>
             </li>
           </ul>
