added shuffle to sponsoren order

--- a/sponsoren.html
+++ b/sponsoren.html
@@ -27,7 +27,7 @@
       <div class="content" onclick="">
         <div class="standard-article" style="text-align: center;">
           <h2>Sponsoren</h2>
-          <ul class="sponsoren">
+          <ul class="sponsoren" id="sponsorenUl">
             <li>
               <a href="https://www.suewag.de/privatkunden" target="_blank" style="border-radius: 0px;">
                 <img src="images/sponsoren/swag_450.jpg" alt="Banner Suewag" />
@@ -199,12 +199,12 @@
               </a>
             </li>
           </ul>
-
         </div>
       </div>
       <div class="footer" id="footer">
         <script>
           insertFooter();
+          shuffleSponsoren();
         </script>
       </div>
     </div>
