--- a/training.html
+++ b/training.html
@@ -58,18 +58,18 @@
                 <h4>Training Jugend</h4>
                 <p>Montags und Mittwochs</p>
                 <p>Schülerinnen und Schüler</p>
-                <p>17:30 - 19:30 Uhr</p>
+                <p><b>18:00 - 19:45</b> Uhr</p>
                 <p>Mädchen und Jungen</p>
-                <p>19:00 - 21:00 Uhr</p>
+                <p><b>19:00 - 21:00</b> Uhr</p>
               </div>
               <div class="flex-box-child">
                 <h4>Training Erwachsene</h4>
                 <p>Montags und Mittwochs</p>
-                <p>19:30 - 22:00 Uhr</p>
+                <p><b>19:45 - 22:00</b> Uhr</p>
               </div>
               <div class="flex-box-child">
                 <h4>Samstags</h4>
-                <p>ab 14:30 Uhr</p>
+                <p>ab <b>14:30</b> Uhr</p>
                 <p>Heimspiele aller Mannschaften</p>
               </div>
             </div>
