--- a/mitgliedsantrag.html
+++ b/mitgliedsantrag.html
@@ -54,12 +54,12 @@
             </div>
             <hr />
             <img style="display: unset;"
-              src="images/mitgliedsantragvorschau.PNG"
+              src="images/ttvb_mitgliedsantrag_2023.pdf"
               alt="Vorschaubild Mitgliedsantrag"
             />
             <form
               method="get"
-              action="other/mitgliedsantrag_2018.pdf"
+              action="other/ttvb_mitgliedsantrag_2023.pdf"
               style="margin-bottom: 5px;"
             >
               <button type="submit">Download</button>
