--- a/mitgliedsantrag.html
+++ b/mitgliedsantrag.html
@@ -54,7 +54,7 @@
             </div>
             <hr />
             <img style="display: unset;"
-              src="images/ttvb_mitgliedsantrag_2023.pdf"
+              src="images/mitgliedsantrag_vorschau.JPG"
               alt="Vorschaubild Mitgliedsantrag"
             />
             <form
