--- a/termine.html
+++ b/termine.html
@@ -44,14 +44,15 @@
         <div class="content" onclick="">
           <div class="standard-article" style="text-align: center;">
             <h2>Termine und Fahrerliste</h2>
+            <p>Aktuell ist keine Fahrerliste verfügbar</p>
             <img
               style="display: unset;"
-              src="images/jugendfahrplanvorschau2020.PNG"
-              alt="Vorschaubild Jugendfahrplan"
+              src="images/ttvb_info_vorschau.JPG"
+              alt="Vorschaubild TTVB INFO"
             />
             <form
               method="get"
-              action="other/Jugendplan_RR_2019_20.pdf"
+              action="other/ttvb_info.pdf"
               style="margin-bottom: 5px;"
             >
               <button type="submit">Download</button>
