Vereinsspielplan hinzugefügt; Termine bearbeitet

--- a/termine.html
+++ b/termine.html
@@ -44,7 +44,9 @@
         <div class="content" onclick="">
           <div class="standard-article" style="text-align: center;">
             <h2>Termine und Fahrerliste</h2>
-            <p>Aktuell ist keine Fahrerliste verfügbar</p>
+              <h3>Fahrerliste</h3>
+                <p>Aktuell ist keine Fahrerliste verfügbar</p>
+              <h3>TTV Bühlertal INFO</h3>
             <img
               style="display: unset;"
               src="images/ttvb_info_vorschau.JPG"
@@ -53,6 +55,19 @@
             <form
               method="get"
               action="other/ttvb_info.pdf"
+              style="margin-bottom: 5px;"
+            >
+              <button type="submit">Download</button>
+            </form>
+            <h3>Vereinsspielplan Saison 2023/2024</h3>
+            <img
+              style="display: unset;"
+              src="images/ttvb_vereinsspielplan_vorschau.JPG"
+              alt="Vorschaubild TTVB INFO"
+            />
+            <form
+              method="get"
+              action="other/ttvb_vereinsspielplan.pdf"
               style="margin-bottom: 5px;"
             >
               <button type="submit">Download</button>
