minor project cleanup

--- a/termine.html
+++ b/termine.html
@@ -44,12 +44,12 @@
         <div class="content" onclick="">
           <div class="standard-article" style="text-align: center;">
             <h2>Termine und Fahrerliste</h2>
-              <h3>Fahrerliste</h3>
-                <p>Aktuell ist keine Fahrerliste verfügbar</p>
-              <h3>TTV Bühlertal INFO</h3>
+            <h3>Fahrerliste</h3>
+            <p>Aktuell ist keine Fahrerliste verfügbar</p>
+            <h3>TTV Bühlertal INFO</h3>
             <img
               style="display: unset;"
-              src="images/ttvb_info_vorschau.JPG"
+              src="images/vorschaubilder/ttvb_info_vorschau.JPG"
               alt="Vorschaubild TTVB INFO"
             />
             <form
@@ -62,8 +62,8 @@
             <h3>Vereinsspielplan Saison 2023/2024</h3>
             <img
               style="display: unset;"
-              src="images/ttvb_vereinsspielplan_vorschau.JPG"
-              alt="Vorschaubild TTVB INFO"
+              src="images/vorschaubilder/ttvb_vereinsspielplan_vorschau.JPG"
+              alt="Vereinsspielplan Saison 2023/2024"
             />
             <form
               method="get"
