--- a/vorstand.html
+++ b/vorstand.html
@@ -73,10 +73,10 @@
               </div>
               <div class="flex-box-child">
                 <h4>2. Vorsitzender</h4>
-                <p>Christian Kohler</p>
-                <p>77830 Bühlertal</p>
-                <p>Tel. 07223-8011099</p>
-                <p>E-Mail: c-kohler@t-online.de</p>
+                <p>Aline Zimpfer</p>
+                <p></p>
+                <p></p>
+                <p></p>
               </div>
               <div class="flex-box-child">
                 <h4>Kassier</h4>
@@ -94,7 +94,7 @@
                 <h4>Schriftführer</h4>
                 <p>Andreas Boy</p>
                 <p>77830 Bühlertal</p>
-                <p>Tel. 07223-73559</p>
+                <p></p>
                 <p>E-Mail: andy.boy@web.de</p>
               </div>
               <div class="flex-box-child">
