--- a/vorstand.html
+++ b/vorstand.html
@@ -74,9 +74,8 @@
               <div class="flex-box-child">
                 <h4>2. Vorsitzender</h4>
                 <p>Aline Zimpfer</p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p>77855 Achern</p>
+                <p>aline.zimpfer@icloud.com</p>
               </div>
               <div class="flex-box-child">
                 <h4>Kassier</h4>
@@ -94,7 +93,7 @@
                 <h4>Schriftführer</h4>
                 <p>Andreas Boy</p>
                 <p>77830 Bühlertal</p>
-                <p></p>
+                <p>Tel. 07223 22926</p>
                 <p>E-Mail: andy.boy@web.de</p>
               </div>
               <div class="flex-box-child">
