--- a/vorstand.html
+++ b/vorstand.html
@@ -72,11 +72,10 @@
                 </div>
               </div>
               <div class="flex-box-child">
-                <h4>2. Vorsitzender</h4>
-                <p>Christian Kohler</p>
-                <p>77830 Bühlertal</p>
-                <p>Tel. 07223-8011099</p>
-                <p>E-Mail: c-kohler@t-online.de</p>
+                <h4>2. Vorsitzende</h4>
+                <p>Aline Zimpfer</p>
+                <p>77855 Achern</p>
+                <p>E-Mail: aline.zimpfer@icloud.com</p>
               </div>
               <div class="flex-box-child">
                 <h4>Kassier</h4>
@@ -94,7 +93,7 @@
                 <h4>Schriftführer</h4>
                 <p>Andreas Boy</p>
                 <p>77830 Bühlertal</p>
-                <p>Tel. 07223-73559</p>
+                <p>Tel. 07223-22926</p>
                 <p>E-Mail: andy.boy@web.de</p>
               </div>
               <div class="flex-box-child">
