deleted unused files; small corrections; added meta descriptions

--- a/kontakt.html
+++ b/kontakt.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width" user-scalable=0/>
+    <meta name="description" content="Kontaktseite des TTV Bühlertals; Hier finden Sie die Kontaktadressen des Vereins" />
     <title>Tischtennisverein Bühlertal | Offizielle Seite</title>
     <script defer src="app.js"></script>
     <script src="https://kit.fontawesome.com/24583cc326.js" crossorigin="anonymous"></script>
@@ -60,6 +61,8 @@
           <p>Mittelberghalle Bühlertal</p>
           <p>Klotzbergstraße</p>
           <p>77830 Bühlertal</p>
+
+          <p>Bei Fragen bitte eine Mail an info@ttvbuehlertal.de</p>
 
           <h2>Verantwortlicher Seitenbetreiber:</h3>
           <p>Peter Ganter</p>
