--- a/mannschaften.html
+++ b/mannschaften.html
@@ -242,7 +242,7 @@
 
   <div class="col mx-auto">
     <div class="card bg-dark text-light text-center h-100">
-      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren_3_neu.webp" class="card-img-top card_a_img" alt="Herren 3">
+      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren3_2425.webp" class="card-img-top card_a_img" alt="Herren 3">
       <div class="card-body">
         <h5 class="card-title">Herren 3</h5>
         <p class="card-text">
@@ -252,8 +252,7 @@
           3. Bruno Sperling<br>
           4. Peter Ganter<br>
           5. Jürgen Ehreiser<br>
-          6. Jürgen Ehreiser<br>
-          7. Hans-Peter Bauer
+          6. Hans-Peter Bauer
         </p>      
       </div>
       <div class="card-footer">
@@ -264,7 +263,7 @@
 
   <div class="col mx-auto">
     <div class="card bg-dark text-light text-center h-100">
-      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren_4.webp" class="card-img-top card_a_img" alt="Herren 4">
+      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren4_2425.webp" class="card-img-top card_a_img" alt="Herren 4">
       <div class="card-body">
         <h5 class="card-title">Herren 4</h5>
         <p class="card-text">
@@ -286,7 +285,7 @@
 
   <div class="col mx-auto">
     <div class="card bg-dark text-light text-center h-100">
-      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren_5.webp" class="card-img-top card_a_img" alt="Herren 5">
+      <img src="pictures_compressed/verein/mannschaften/gruppenbilder/herren5_2425.webp" class="card-img-top card_a_img" alt="Herren 5">
       <div class="card-body">
         <h5 class="card-title">Herren 5</h5>
         <p class="card-text">
@@ -364,7 +363,7 @@
     </div>
     <div class="col mx-auto">  <!--mx-auto setzt die Einzelne Karte in die Mitte-->
       <div class="card bg-dark text-light text-center h-100">
-        <img src="pictures_compressed/verein/mannschaften/gruppenbilder/" class="card-img-top card_a_img" alt="Damen 2">
+        <img src="pictures_compressed/verein/mannschaften/gruppenbilder/damen2_2425.webp" class="card-img-top card_a_img" alt="Damen 2">
         <div class="card-body">
           <h5 class="card-title">Damen 2</h5>
           <p class="card-text">
@@ -403,7 +402,7 @@
     <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
       <div class="col mx-auto">
         <div class="card bg-dark text-light text-center h-100">
-          <img src="pictures_compressed/verein/mannschaften/gruppenbilder/u19_1_2425.webp" class="card-img-top card_a_img" alt="Jugend U19">
+          <img src="pictures_compressed/verein/mannschaften/gruppenbilder/u19_1_2425.webp" class="card-img-top card_a_img" alt="Jugend U19 1">
           <div class="card-body">
             <h5 class="card-title">Jungen U19</h5>
             <p class="card-text">
@@ -424,7 +423,7 @@
     
       <div class="col mx-auto">
         <div class="card bg-dark text-light text-center h-100">
-          <img src="pictures_compressed/verein/mannschaften/gruppenbilder/jungen19_2425.webp" class="card-img-top card_a_img" alt="Jungen U19">
+          <img src="pictures_compressed/verein/mannschaften/gruppenbilder/u19_2_2425.webp" class="card-img-top card_a_img" alt="Jungen U19 2">
           <div class="card-body">
             <h5 class="card-title">Jungen U19 2</h5>
             <p class="card-text">
