--- a/training.html
+++ b/training.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width" user-scalable=0/>
+  <meta name="description" content="Training beim TTV Bühlertal: Hier finden Sie Trainingszeiten, Informationen über die Trainer*innen und die Sportstätte" />
   <title>Tischtennisverein Bühlertal | Offizielle Seite</title>
   <script defer src="app.js"></script>
   <script src="https://kit.fontawesome.com/24583cc326.js" crossorigin="anonymous"></script>
