--- a/vorstand.html
+++ b/vorstand.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width" user-scalable=0/>
     <title>Tischtennisverein Bühlertal | Offizielle Seite</title>
+    <meta name="description" content="Vorstand des TTV Bühlertals; Hier finden Sie die Vorstandsbesetzung und deren Kontaktadressen, außerdem sind Ehrenmitglieder/Vorsitzende aufgelistet" />
     <script defer src="app.js"></script>
     <script src="https://kit.fontawesome.com/24583cc326.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -205,7 +206,7 @@
 
             <div class="card bg-dark text-light">
               <div class="card-body">
-                <h5 class="card-title">Rowland Lamprecht</h5>
+                <h5 class="card-title">Rowald Lamprecht</h5>
                 <p class="card-text"><span class="fw-bold">Ehrenpräsident (Verstorben)</span></p>
               </div>
               <div class="card-footer">
